--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,16 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {"name":"Python: Arquivo Atual","type":"python","request":"launch","program":"${file}","console":"integratedTerminal","justMyCode":true},
         {
-            "name": "Python: Arquivo Atual",
+            "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
+            "program": "main.py",
             "console": "integratedTerminal",
-            "justMyCode": true
-            
+            "justMyCode": true,
+            "pythonArgs": [
+                "-B"
+            ]
         }
-    ],
-    
-
+    ]
 }
